--- a/css/index.css
+++ b/css/index.css
@@ -4,12 +4,11 @@ body {
 }
 .navigation_bar{
     background-color: blue; 
-    height: 30px; 
-  
+    padding: 15px 0;
     
 }
 .navigation_bar a{
-    float: left;
+    
     color: whitesmoke;
     text-decoration: none;
     font-size: 17px;
