--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,27 @@
-body {
-    background-color: black;
+
+html {
+   
+    background: linear-gradient( to bottom, rgb(0, 132, 255), rgba(0, 255, 200, 0.979));
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    
+}
+body{
     margin: 0px;
 }
 .navigation_bar{
-    background-color: blue; 
+    /* background-color: darkgray; */
+    border-radius: 10px;
+    background-image: linear-gradient(to top,rgba(222, 247, 3, 0.103),yellow);
+    /* background-color: blue;  */
     padding: 15px 0;
     
 }
 .navigation_bar a{
     
-    color: whitesmoke;
+    color: rgb(19, 3, 3);
     text-decoration: none;
     font-size: 17px;
     padding-inline-end: 40px;
@@ -23,10 +35,12 @@ body {
     font-style: oblique;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bolder;
+    
 
 }
-.Introduction{
-   
+.Introduction p{
+    /* background-image: linear-gradient(rgb(243, 17, 17),darkgray); */
+    padding-left: 0px;
    color: cornsilk;
     font-size: larger;
     font-style: italic;
@@ -35,10 +49,11 @@ body {
     
 }
 .Intro_photo{
+    border-radius: 1000px;
     float: right;
     display: block;
     height: auto; 
     width: auto; 
     max-width: 300px; 
-    max-height: 300px;
+    max-height: 200px;
 }
